--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                            
                             <!-- btn -->
                             <div class="about-btn">
-                            <a href="" class="btn">Download Cv</a>
+                            <a href="./images/Nancy-Rana-Resume.pdf" class="btn">Download Cv</a>
                         </div>
                         </div>
 
