--- a/index.html
+++ b/index.html
@@ -289,36 +289,36 @@
     </div>
   </section>
   <!-- =========================contact form ======================== -->
-<!-- 
+
   <section class="contact" id="contact">
     <div class="heading">
       <h2>Contact</h2>
       <span>Contact Deatils</span>
-    </div> -->
+    </div>
 
     <!-- form -->
 
-    <!-- <div class="contact-form">
-      <div class="information"> -->
+    <div class="contact-form">
+      <div class="information">
         <!-- box1 -->
-        <!-- <div class="info-box">
+        <div class="info-box">
           <i class="bx bxs-phone"></i>
           <span><a href="tel:+918570984471"> +91 8570984471</a></span>
-        </div> -->
+        </div>
         <!-- box3 -->
-        <!-- <div class="info-box">
+        <div class="info-box">
           <i class="bx bxs-envelope"></i>
           <span> <a href="mailto: rananancy91@gmail.com"> rananancy91@gmail.com</a></span>
         </div>
       </div>
-      <form action="https://formspree.io/f/xpznqgvl" method="post">
+      <form action="https://formspree.io/f/mayznqkl" method="post">
         <input type="text" placeholder="Your Name" name="Name">
         <input type="email" placeholder="Your Email" name="Email">
         <textarea name="Message" id="" cols="30" rows="10" placeholder="Write Your Massage Here...."></textarea>
         <input type="submit" value="Send" class="contact-button">
       </form>
     </div>
-  </section> -->
+  </section>
 
   <!-- ======================footer section============================ -->
   <div class="footer">
