--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <li><a href="#myskill">Skills</a></li>
       <li><a href="#project">Project</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li><a href="">Resume</a></li>
+      <li><a href="./images/Nancy-Rana-Resume.pdf">Resume</a></li>
       <!-- dark mode button -->
       <!-- <div class="bx bx-moon" id="darkmode"></div> -->
     </ul>
@@ -94,7 +94,7 @@
 
         <!-- btn -->
         <div class="about-btn">
-          <a href="./images/Nancy-Rana-Resume.pdf" class="btn">Download Cv</a>
+          <a href="./images/Nancy-Rana-Resume.pdf" download class="btn">Download Cv</a>
         </div>
       </div>
 
