--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <a href="https://github.com/Mohak973/cared-middle-4484" target="_blank"><i class="fa-brands fa-github"></i>
               GitHub</a>
             <a href="https://charming-blini-e26370.netlify.app/" target="_blank"><i class="fa-brands fa-chrome"></i>
-              Live</a>
+              Link</a>
           </div>
         </div>
       </div>
@@ -230,7 +230,7 @@
             <a href="https://github.com/dileep8920/Meanbuy-Clone" target="_blank"><i class="fa-brands fa-github"></i>
               GitHub</a>
             <a href="https://shiny-torrone-69ae7b.netlify.app/landing_page/" target="_blank"><i
-                class="fa-brands fa-chrome"></i> Live</a>
+                class="fa-brands fa-chrome"></i> Link</a>
           </div>
         </div>
       </div>
