--- a/index.html
+++ b/index.html
@@ -140,6 +140,20 @@
       </div>
       <!-- box2 -->
       <div class="skills-box">
+        <i class="fa-sharp fa-solid fa-leaf"></i>
+        <h3>SpringBoot</h3>
+      </div>
+      <div class="skills-box">
+        <i class="fa-solid fa-database"></i>
+        <h3>SQL</h3>
+      </div>
+      <!-- box2 -->
+      <div class="skills-box">
+        <i class="fa-brands fa-aws"></i>
+        <h3>AWS</h3>
+      </div>
+      <!-- box2 -->
+      <div class="skills-box">
         <i class="fa-brands fa-js"></i>
         <h3>Java-Script</h3>
       </div>
@@ -158,6 +172,7 @@
         <i class="fa-brands fa-github"></i>
         <h3>GitHub</h3>
       </div>
+
     </div>
   </section>
 
@@ -195,23 +210,38 @@
       <h2>Projects</h2>
       <span>Recent Projects</span>
     </div>
-
     <div class="project-content">
       <div class="project-box">
-        <img src="./images/toggle.PNG" alt="">
+        <img src="./images/SD Tools.png" alt="">
 
         <div class="project-data">
-          <h2>Toggle Track</h2>
-          <p>A web application used for time tracking to save your time and
-            money and also used to analyse project and teams.</p>
+          <h2>Software and Hardware Management Application</h2>
+          <p>A JDBC application help to regiter problems and solving them</p>
           <h4>Tech Stack:</h4>
-          <p>HTML | CSS | Javascript | Bootstrap</p>
+          <p>Java | JDBC | STS | MySql</p>
 
           <div class="project-btn">
-            <a href="https://github.com/Mohak973/cared-middle-4484" target="_blank"><i class="fa-brands fa-github"></i>
-              GitHub</a>
-            <a href="https://charming-blini-e26370.netlify.app/" target="_blank"><i class="fa-brands fa-chrome"></i>
-              Link</a>
+            <a href="https://github.com/Nancy8570/-honest-trees-8857" target="_blank"><i
+                class="fa-brands fa-github"></i> GitHub</a>
+            <a href="https://drive.google.com/file/d/1RtEJo44UQjGucAbZyWZBrxD7eq6hvs5k/view?usp=sharing" target="_blank"><i
+                class="fa-solid fa-video"></i> Video</a>
+          </div>
+        </div>
+      </div>
+      <div class="project-box">
+        <img src="./images/CAB_WALA (1).png" alt="">
+
+        <div class="project-data">
+          <h2>Cab Booking Application</h2>
+          <p>A SpringBoot project containing RESTful API's for booking cab and manageing trips.</p>
+          <h4>Tech Stack:</h4>
+          <p>Java | SpringBoot | Postman | MySql | Spring security | Swagger</p>
+
+          <div class="project-btn">
+            <a href="https://github.com/iamsatyamyadav/elegant-yam-358-" target="_blank"><i
+                class="fa-brands fa-github"></i> GitHub</a>
+            <a href="https://drive.google.com/file/d/1RtEJo44UQjGucAbZyWZBrxD7eq6hvs5k/view?usp=sharing"
+              target="_blank"><i class="fa-solid fa-video"></i> Video</a>
           </div>
         </div>
       </div>
@@ -234,7 +264,24 @@
           </div>
         </div>
       </div>
+      <div class="project-box">
+        <img src="./images/toggle.PNG" alt="">
 
+        <div class="project-data">
+          <h2>Toggle Track</h2>
+          <p>A web application used for time tracking to save your time and
+            money and also used to analyse project and teams.</p>
+          <h4>Tech Stack:</h4>
+          <p>HTML | CSS | Javascript | Bootstrap</p>
+
+          <div class="project-btn">
+            <a href="https://github.com/Mohak973/cared-middle-4484" target="_blank"><i class="fa-brands fa-github"></i>
+              GitHub</a>
+            <a href="https://charming-blini-e26370.netlify.app/" target="_blank"><i class="fa-brands fa-chrome"></i>
+              Link</a>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <!-- =================== statics=================== -->
