--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <li><a href="#myskill">Skills</a></li>
       <li><a href="#project">Project</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li><a href="./images/Nancy-Rana-Resume.pdf" target="_blank" download="fw19_1072-Nancy-Rana-Resume" onclick="window.open('https://drive.google.com/file/d/1I5LVfBgK_B0kU_PHR9wJQlcnhYrUnywz/view?usp=share_link')">Resume</a></li>
+      <li><a href="./images/Nancy-Rana-Resume (1).pdf" target="_blank" download="fw19_1072-Nancy-Rana-Resume" onclick="window.open('https://drive.google.com/file/d/1I5LVfBgK_B0kU_PHR9wJQlcnhYrUnywz/view?usp=share_link')">Resume</a></li>
       <!-- dark mode button -->
       <!-- <div class="bx bx-moon" id="darkmode"></div> -->
     </ul>
@@ -94,7 +94,7 @@
 
         <!-- btn -->
         <div class="about-btn">
-          <a href="./images/Nancy-Rana-Resume.pdf"  target="_blank" download="fw19_1072-Nancy-Rana-Resume" onclick="window.open('https://drive.google.com/file/d/1I5LVfBgK_B0kU_PHR9wJQlcnhYrUnywz/view?usp=share_link')" class="btn">Download Cv</a>
+          <a href="./images/Nancy-Rana-Resume (1).pdf"  target="_blank" download="fw19_1072-Nancy-Rana-Resume" onclick="window.open('https://drive.google.com/file/d/1I5LVfBgK_B0kU_PHR9wJQlcnhYrUnywz/view?usp=share_link')" class="btn">Download Cv</a>
         </div>
       </div>
 
